[package]
name = "string-repr"
description = "A trait for converting a value to a `String`"
version = "1.0.1"
authors = ["Grigoriy Baranov <baranov@w3m.co>"]
repository = "https://github.com/WatchDG/rust-string-repr"
license = "MIT"
edition = "2018"

exclude = [
    ".github",
    ".gitignore",
    "README.md"
]

[dependencies]
